# littissuesegmentation

./: .gitignore
training/: pyproject.toml  train.py
training/littissuesegmentation/: __init__.py  augmenters.py  chunking.py  dataloaders.py  losses.py  models.py  train.py
training/prepare_data/: tile_images.py
training/test/: test_augmenters.py  test_chunking.py
