[tool.poetry]
name = "littissuesegmentation"
version = "0.1.0"
description = "Pytorch lightning implementation of Segmentation models pytorch"
authors = ["Jspaezp <jspaezp@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.7.1"
torch = "^1.7.1"
segmentation-models-pytorch = "^0.1.3"
wandb = "^0.10.14"
pytorch-lightning = "^1.1.4"
opencv-python = "^4.5.1"
imgaug = "^0.4.0"
pandas = "^1.2.0"

[tool.poetry.dev-dependencies]
poetry = "^1.1.4"
MonkeyType = "^20.5.0"
pytest = "^6.2.1"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
